git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@517 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.common.domain.as/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.common.domain.as/pom.xml
@@ -31,7 +31,7 @@
             <plugin>
                 <groupId>org.sonatype.flexmojos</groupId>
                 <artifactId>flexmojos-maven-plugin</artifactId>
-                <version>3.4.0</version>
+                <version>3.3.0</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -122,29 +122,25 @@
 
     <repositories>
         <repository>
-            <id>flex-mojos-repository</id>
-            <url>http://svn.sonatype.org/flexmojos/repository/</url>
+            <id>sonatype-public</id>
+            <url>http://repository.sonatype.org/content/groups/public</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </snapshots>
-        </repository>
-        <repository>
-            <id>restforflex</id>
-            <url>http://restforflex.googlecode.com/svn/repo</url>
-        </repository>
+	</repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
-            <id>flex-mojos-repository</id>
-            <url>http://svn.sonatype.org/flexmojos/repository/</url>
+            <id>sonatype-public</id>
+            <url>http://repository.sonatype.org/content/groups/public</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
