Created site content
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@538 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.common.domain/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.common.domain/pom.xml
@@ -18,6 +18,11 @@
     <artifactId>org.openwms.common.domain</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+
+    <properties>
+        <moduleDir>..</moduleDir>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -36,6 +41,7 @@
             </plugin>
         </plugins>
     </build>
+
     <dependencies>
         <!-- Runtime dependencies -->
         <dependency>
