--- a/OpenWMS-common/trunk/org.openwms.common.service.spring/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.common.service.spring/pom.xml
@@ -36,6 +36,15 @@
             </plugin>
         </plugins>
     </build>
+<reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.0.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
