git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@545 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/pom.xml
+++ b/org.openwms/trunk/source/pom.xml
@@ -6,9 +6,7 @@
  * Distributable under LGPL license.
  * See terms of license at gnu.org.
  */
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openwms</groupId>
     <artifactId>org.openwms</artifactId>
@@ -238,7 +236,8 @@
         <module>org.openwms.client.flex.wrapper</module>
         <module>org.openwms.app</module>
  -->
-    </modules>
+    <module>docs</module>
+  </modules>
 
     <build>
 
