Migrated to new folder structure. source is next to docs and site generation folder
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@551 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.app/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.app/pom.xml
@@ -18,6 +18,9 @@
     <artifactId>org.openwms.app</artifactId>
     <packaging>par</packaging>
     <name>${project.artifactId}</name>
+    <properties>
+        <moduleDir>..</moduleDir>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
