--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -19,6 +19,7 @@
     <packaging>war</packaging>
     <name>${project.artifactId}</name>
     <properties>
+        <moduleDir>..</moduleDir>
         <packed.app>${project.groupId}.client.flex.app-${project.version}</packed.app>
     </properties>
     <build>
