--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -19,6 +19,7 @@
     <packaging>swc</packaging>
     <name>${project.artifactId}</name>
     <properties>
+        <moduleDir>..</moduleDir>
         <property.org.graniteds-core.version>1.2.0_SP1</property.org.graniteds-core.version>
         <property.org.graniteds.version>2.0.0.GA</property.org.graniteds.version>
         <property.org.graniteds.version2>1.2.0</property.org.graniteds.version2>
