--- a/org.openwms/trunk/source/org.openwms.common.integration/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.integration/pom.xml
@@ -18,6 +18,9 @@
     <artifactId>org.openwms.common.integration</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+    <properties>
+        <moduleDir>..</moduleDir>
+    </properties>
     <build>
         <plugins>
             <plugin>
