Ignored Eclipse files
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@560 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/docs/pom.xml
+++ b/org.openwms/trunk/source/docs/pom.xml
@@ -16,6 +16,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>docs</artifactId>
+    <name>${project.artifactId}</name>
     <packaging>pom</packaging>
     <properties>
         <moduleDir>..</moduleDir>
