--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -22,6 +22,11 @@
         <moduleDir>..</moduleDir>
         <packed.app>${project.groupId}.client.flex.app-${project.version}</packed.app>
     </properties>
+    <scm>
+        <connection>scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper</connection>
+        <developerConnection>scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper</developerConnection>
+        <url>https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper</url>
+    </scm>
     <build>
         <sourceDirectory>src/main</sourceDirectory>
         <finalName>${project.artifactId}</finalName>
@@ -68,7 +73,7 @@
             </plugin>
         </plugins>
     </build>
-
+    
     <repositories>
         <repository>
             <id>sonatype-public</id>
@@ -79,7 +84,7 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-	</repository>
+        </repository>
         <repository>
             <id>granite-repo</id>
             <url>http://download.java.net/maven/2/</url>
@@ -89,7 +94,7 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-	</repository>
+        </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
